environment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-service
spec:
  type: NodePort
  selector:
    app: voting-app
  ports:
    - port: 80
      targetPort: 80
